--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   shimmer: ^3.0.0
   flutter_rating_bar: ^4.0.1
   intl: ^0.19.0
+  
+  # Audio
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +83,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  # Assets
+  assets:
+    - assets/sounds/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
